--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,6 +3,10 @@
     padding: 0;
   }
 
+  .mobile-only {
+    display: block;
+  }
+
   .background-circle {
     display: none;
   }
@@ -11,8 +15,8 @@
     display: block;
     position: absolute;
     z-index: 99;
-    top: 12px;
-    right: 12px;
+    top: 10px;
+    right: 18px;
     text-align: left;
   }
 
@@ -79,6 +83,8 @@
     z-index: 98;
     padding: 4.75rem 1rem;
     margin-right: -2rem;
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
   }
 
   .navbar .navbar-list.responsive-active {
@@ -95,7 +101,7 @@
 
   .navbar .navbar-list ul li {
     margin-right: 0;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
   }
 
   .navbar .navbar-list ul li a {
@@ -121,7 +127,7 @@
     text-align: left;
     margin-top: 6rem;
     width: 100%;
-    margin-bottom: 2rem;
+    margin-bottom: 2.5rem;
   }
 
   .intro-section .intro-texts h1 {
@@ -133,11 +139,16 @@
   .intro-section .intro-texts p {
     font-size: 1rem;
     line-height: 1.5rem;
-    margin-bottom: 2.5rem;
+    margin-bottom: 0;
+  }
+
+  .intro-section .intro-texts button {
+    display: none;
   }
 
   .intro-section .intro-image {
     width: 100%;
+    margin-bottom: 2rem;
   }
 
   .services {
@@ -171,7 +182,7 @@
   }
 
   .references .references-text h1 {
-    width: 90%;
+    width: 85%;
     margin: auto;
     font-size: 2rem;
     font-weight: 600;
