--- a/css/responsive.css
+++ b/css/responsive.css
@@ -78,13 +78,11 @@
     right: 0;
     flex-direction: column;
     text-align: right;
-    background: rgba(255,255,255,0.9);
+    background: rgba(255,255,255,0.95);
     transition: 0.5s;
     z-index: 98;
     padding: 4.75rem 1rem;
     margin-right: -2rem;
-    backdrop-filter: blur(3px);
-    -webkit-backdrop-filter: blur(3px);
   }
 
   .navbar .navbar-list.responsive-active {
@@ -125,7 +123,7 @@
 
   .intro-section .intro-texts {
     text-align: left;
-    margin-top: 6rem;
+    margin-top: 4rem;
     width: 100%;
     margin-bottom: 2.5rem;
   }
@@ -140,6 +138,10 @@
     font-size: 1rem;
     line-height: 1.5rem;
     margin-bottom: 0;
+  }
+
+  .intro-section .intro-texts p span {
+    display: none;
   }
 
   .intro-section .intro-texts button {
